--- a/deploy/hello.yaml
+++ b/deploy/hello.yaml
@@ -14,7 +14,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: saiyam911/argocd-demo:sha-1f926eb
+        image: saiyam911/kubeworkshop:sha-1f926eb
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
