--- a/deploy/hello.yaml
+++ b/deploy/hello.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: helloservice
+  namespace: demo
 spec:
   selector:
     matchLabels:
@@ -26,6 +27,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: helloservice
+  namespace: demo
 spec:
   selector:
     app: helloservice
