--- a/.github/workflows/build-push-image.yaml
+++ b/.github/workflows/build-push-image.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: saiyam911/kubeworkshop
+          repository: saiyam911/argocd-demo
           tag_with_ref: true
           add_git_labels: true
           tag_with_sha: true
